Start using property testing for generating simulation workloads using high-level ScanAll and CreateVertex requests

--- a/tests/simulation/CMakeLists.txt
+++ b/tests/simulation/CMakeLists.txt
@@ -18,8 +18,8 @@ function(add_simulation_test test_cpp)
   set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${exec_name})
 
   # sanitize
-  target_compile_options(${target_name} PRIVATE -fsanitize=${san})
-  target_link_options(${target_name} PRIVATE -fsanitize=${san})
+  target_compile_options(${target_name} PRIVATE -fsanitize=address)
+  target_link_options(${target_name} PRIVATE -fsanitize=address)
 
   target_link_libraries(${target_name} mg-storage-v3 mg-communication gtest gmock mg-utils mg-io mg-io-simulator mg-coordinator Boost::headers mg-query-v2)
 
@@ -28,9 +28,35 @@ function(add_simulation_test test_cpp)
   add_dependencies(memgraph__simulation ${target_name})
 endfunction(add_simulation_test)
 
-add_simulation_test(basic_request.cpp address)
-add_simulation_test(raft.cpp address)
-add_simulation_test(trial_query_storage/query_storage_test.cpp address)
-add_simulation_test(sharded_map.cpp address)
-add_simulation_test(shard_request_manager.cpp address)
+add_simulation_test(basic_request.cpp)
+add_simulation_test(raft.cpp)
+add_simulation_test(trial_query_storage/query_storage_test.cpp)
+add_simulation_test(sharded_map.cpp)
 add_simulation_test(shard_rsm.cpp)
+
+
+function(add_simulation_property test_cpp)
+  # get exec name (remove extension from the abs path)
+  get_filename_component(exec_name ${test_cpp} NAME_WE)
+  set(target_name ${test_prefix}${exec_name})
+  add_executable(${target_name} ${test_cpp})
+
+  # OUTPUT_NAME sets the real name of a target when it is built and can be
+  # used to help create two targets of the same name even though CMake
+  # requires unique logical target names
+  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${exec_name})
+
+  # sanitize
+  target_compile_options(${target_name} PRIVATE -fsanitize=address)
+  target_link_options(${target_name} PRIVATE -fsanitize=address)
+
+  target_link_libraries(${target_name} mg-storage-v3 mg-communication mg-utils mg-io mg-io-simulator mg-coordinator Boost::headers mg-query-v2)
+  target_link_libraries(${target_name} gtest gtest_main)
+  target_link_libraries(${target_name} rapidcheck rapidcheck_gtest)
+
+  # register test
+  add_test(${target_name} ${exec_name})
+  add_dependencies(memgraph__simulation ${target_name})
+endfunction(add_simulation_property)
+
+add_simulation_property(cluster_property_test.cpp)
