Decouple reusable code

--- a/tests/manual/CMakeLists.txt
+++ b/tests/manual/CMakeLists.txt
@@ -41,6 +41,12 @@ if (READLINE_FOUND)
   target_link_libraries(${test_prefix}query_planner readline)
 endif()
 
+add_manual_test(query_example.cpp)
+target_link_libraries(${test_prefix}query_example mg-query)
+if (READLINE_FOUND)
+  target_link_libraries(${test_prefix}query_example readline)
+endif()
+
 add_manual_test(expression_pretty_printer.cpp)
 target_link_libraries(${test_prefix}expression_pretty_printer mg-query)
 
