--- a/tests/e2e/distributed_queries/CMakeLists.txt
+++ b/tests/e2e/distributed_queries/CMakeLists.txt
@@ -6,6 +6,5 @@ distributed_queries_e2e_python_files(distributed_queries.py)
 distributed_queries_e2e_python_files(unwind_collect.py)
 distributed_queries_e2e_python_files(order_by_and_limit.py)
 distributed_queries_e2e_python_files(distinct.py)
-# TODO(kostasrim) Enable this once I fix OPTIONAL MATCH
-#distributed_queries_e2e_python_files(optional_match.py)
+distributed_queries_e2e_python_files(optional_match.py)
 distributed_queries_e2e_python_files(common.py)
