--- a/src/license/CMakeLists.txt
+++ b/src/license/CMakeLists.txt
@@ -3,4 +3,4 @@ set(license_src_files
     license.cpp)
 add_library(mg-license STATIC ${license_src_files})
 
-target_link_libraries(mg-license mg-settings mg-utils mg-requests)
+target_link_libraries(mg-license mg-settings mg-utils mg-requests mg-telemetry)
