Add integration test

--- a/tests/integration/CMakeLists.txt
+++ b/tests/integration/CMakeLists.txt
@@ -13,24 +13,6 @@ add_subdirectory(auth)
 # lba test binaries
 add_subdirectory(fine_grained_access)
 
-## distributed ha/basic binaries
-#add_subdirectory(ha/basic)
-#
-## distributed ha/constraints binaries
-#add_subdirectory(ha/constraints)
-#
-## distributed ha/index binaries
-#add_subdirectory(ha/index)
-#
-## distributed ha/large_log_entries binaries
-#add_subdirectory(ha/large_log_entries)
-#
-## distributed ha/leader_election binaries
-#add_subdirectory(ha/leader_election)
-#
-## distributed ha/term_updates binaries
-#add_subdirectory(ha/term_updates)
-
 # audit test binaries
 add_subdirectory(audit)
 
@@ -39,3 +21,6 @@ add_subdirectory(ldap)
 
 # mg_import_csv test binaries
 add_subdirectory(mg_import_csv)
+
+# license_check test binaries
+add_subdirectory(license_info)
