Add basic structure
* dummy physical plan generator
* dummy physical operators
* few basic comments / reasoning

--- a/tests/manual/CMakeLists.txt
+++ b/tests/manual/CMakeLists.txt
@@ -47,6 +47,12 @@ if (READLINE_FOUND)
   target_link_libraries(${test_prefix}query_execution_dummy readline)
 endif()
 
+add_manual_test(query_physical_plan.cpp)
+target_link_libraries(${test_prefix}query_physical_plan mg-query)
+if (READLINE_FOUND)
+  target_link_libraries(${test_prefix}query_physical_plan readline)
+endif()
+
 add_manual_test(expression_pretty_printer.cpp)
 target_link_libraries(${test_prefix}expression_pretty_printer mg-query)
 
