--- a/.github/workflows/diff.yaml
+++ b/.github/workflows/diff.yaml
@@ -90,6 +90,7 @@ jobs:
             echo ${file}
             if [[ ${file} == *.py ]]; then
               python3 -m black --check --diff ${file}
+              python3 -m isort --check-only --diff ${file}
             fi
           done
 
